# compas_cra

./: .bumpversion.cfg  .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  conftest.py  doc_versions.txt  env_linux.yml  env_osx.yml  env_win.yml  index.html  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tasks.py  versions.json
.github/workflows/: build.yml  docs.yml  release.yml
0.1.0/: license.html  search.html
0.1.0/.doctrees/: environment.pickle
0.2.0/: .buildinfo  contributions.html  genindex.html  index.html  objects.inv  search.html
0.2.0/.doctrees/: cite.doctree  environment.pickle  examples.doctree
0.2.0/api/: compas_cra.datastructures.html  compas_cra.geometry.html  compas_cra.viewers.html
0.2.0/examples/: 00_simple_cube.html  02_cubes.html  06_arch.html  09_bridge.html  11_concave-short.html  13_curve-3-blocks.html  16_ha.html
0.2.1/: .buildinfo  api.html  contributions.html  examples.html  genindex.html  objects.inv  tutorial.html
0.2.1/.doctrees/: cite.doctree  index.doctree
0.2.1/_static/: documentation_options.js
0.2.1/api/: compas_cra.algorithms.html  compas_cra.datastructures.html  compas_cra.geometry.html  compas_cra.html  compas_cra.viewers.html
0.2.1/examples/: 00_simple_cube.html  01_cubes_rbe.html  02_cubes.html  03_cubes_penalty.html  04_stacks.html  05_wedge.html  06_arch.html  07_shelf.html  08_snake.html  09_bridge.html  10_armadillo.html  11_concave-short.html  12_concave-long.html  13_curve-3-blocks.html  14_cube-curve-short.html  15_cube-curve-tall.html  16_ha.html
0.2.2/: genindex.html  installation.html  search.html
0.2.2/.doctrees/: api.doctree  examples.doctree
0.2.2/api/: compas_cra.geometry.html
0.3.0/: examples.html  genindex.html  license.html  objects.inv  py-modindex.html
0.3.0/.doctrees/: installation.doctree  (+1 more)
0.4.0/: .buildinfo  api.html  cite.html  contributions.html  examples.html  genindex.html  index.html  installation.html  knownissues.html  license.html  objects.inv  search.html  searchindex.js  tutorial.html
0.5.0/: api.html  cite.html  contributions.html  examples.html  genindex.html  index.html  installation.html  knownissues.html  license.html  objects.inv  search.html  tutorial.html
data/: A.json  H.json  armadillo.json  armadillo_cra.json  boxes.json  bridge.json  cra_boxes.json  cube-curve-tall.json  cubes.json  curve-3-blocks.json  shelf-s1.json  shelf-s2.json  shelf-stable.json  shelf.json  shelf_s1.json  shelf_s2.json  shelf_s3.json  snake.json  type-a.json  type-b.json  type-c.json  type-d.json
docs/: api.rst  cite.rst  conf.py  contributions.rst  examples.rst  index.rst  installation.rst  knownissues.rst  tutorial.rst
examples/: armadillo.py  cubes.py  shelf.py  snake.py  wedge.py
latest/: .buildinfo  api.html  cite.html  contributions.html  examples.html  genindex.html  gettingstarted.html  index.html  installation.html  knownissues.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorial.html
recipe/: sha256.py
scripts/: boxes.py  cube_simple.py  mesh_to_assembly_interfaces_json.py  mesh_to_assembly_json.py  mesh_to_json.py  oldtonew_assembly_json.py  oldtonew_json.py  rhinoenv.py  tutorial_cubes.py
stable/: .buildinfo  api.html  index.html  installation.html  license.html  py-modindex.html  search.html  searchindex.js
tests/: test_cra.py  test_cra_penalty.py  test_dummy.py  test_ipopt.py  test_mosek.py  test_rbe.py
(+348 files in other folders)
